Se ha conseguido mostrar las cards pero falta mostrar más datos

--- a/star_wars/pubspec.yaml
+++ b/star_wars/pubspec.yaml
@@ -75,7 +75,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
@@ -87,5 +87,8 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+    - family: JediFont
+      fonts:
+        - asset: fonts/Starjedi.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
